--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "google-auth-library": "^9.7.0",
     "googleapis": "^134.0.0",
     "lucide-react": "^0.274.0",
-    "next": "^14.1.1-canary.37",
-    "next-auth": "^5.0.0-beta.15",
+    "next": "latest",
+    "next-auth": "beta",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0",
